toList in EdeltaInterpreterHelper